--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ header a:hover {
 }
 
 .page_selected {
-  background-image: url("./selectedBackground.png");
+  background-image: url("../images/selectedBackground.png");
   background-size: 100% 100%;
   font-weight: bold;
 }
